WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195344
Fix WKPasswordView compilation on iOS
https://bugs.webkit.org/show_bug.cgi?id=195344
Summary
Fix WKPasswordView compilation on iOS
Dean Jackson
Reported
2019-03-05 15:32:30 PST
Add a platform define for UIColor system colors
Attachments
Patch
(2.71 KB, patch)
2019-03-05 16:42 PST
,
Dean Jackson
no flags
Details
Formatted Diff
Diff
Patch
(1.71 KB, patch)
2019-03-05 17:12 PST
,
Dean Jackson
dbates
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2019-03-05 16:42:14 PST
Created
attachment 363708
[details]
Patch
Dean Jackson
Comment 2
2019-03-05 16:42:37 PST
<
rdar://problem/48620066
>
Dean Jackson
Comment 3
2019-03-05 17:12:36 PST
Created
attachment 363710
[details]
Patch
Daniel Bates
Comment 4
2019-03-05 19:09:15 PST
Comment on
attachment 363710
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=363710&action=review
> Source/WebKit/UIProcess/ios/WKPasswordView.mm:110 > [_scrollView setBackgroundColor:[UIColor groupTableViewBackgroundColor]];
Ok as is, but if you want to be a nice guy you could fix up this line up for all Apple Engineers (including me!). Search radars on Andy Estes whose title contains groupTableView.... or poke Andy with a stick (I tried but it wasn’t sharp enough ;))
Daniel Bates
Comment 5
2019-03-05 19:10:48 PST
Comment on
attachment 363710
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=363710&action=review
>> Source/WebKit/UIProcess/ios/WKPasswordView.mm:110 >> [_scrollView setBackgroundColor:[UIColor groupTableViewBackgroundColor]]; > > Ok as is, but if you want to be a nice guy you could fix up this line up for all Apple Engineers (including me!). Search radars on Andy Estes whose title contains groupTableView.... or poke Andy with a stick (I tried but it wasn’t sharp enough ;))
Actually, depending on when SYSTEM COLORS is enabled you may have worked around the issue I am referring too at least for this callsite.... still applicable To othe call sites.
Daniel Bates
Comment 6
2019-03-05 19:11:56 PST
Digital poking (CC) Andy
Dean Jackson
Comment 7
2019-03-06 10:14:28 PST
Committed
r242552
: <
https://trac.webkit.org/changeset/242552
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug