Fix WKPasswordView compilation on iOS https://bugs.webkit.org/show_bug.cgi?id=195344 <rdar://problem/48620066>

Reviewed by Dan Bates.

Use WebKitAdditions.

* UIProcess/ios/WKPasswordView.mm:
(-[WKPasswordView showInScrollView:]):

Canonical link: https://commits.webkit.org/209701@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242552 268f45cc-cd09-0410-ab3c-d52691b4dbfc