Source/WebKit/UIProcess/ios/WKPasswordView.mm
@@ -35,6 +35,16 @@
 #import <wtf/RetainPtr.h>
 #import <wtf/text/WTFString.h>
 
+#if USE(APPLE_INTERNAL_SDK) && __has_include(<WebKitAdditions/WKPasswordViewAdditions.mm>)
+#include <WebKitAdditions/WKPasswordViewAdditions.mm>
+#else
+static void configureScrollView(UIScrollView *scrollView)
+{
+    [scrollView setBackgroundColor:[UIColor groupTableViewBackgroundColor]];
+}
+#endif
+
+
 const CGFloat passwordEntryFieldPadding = 10;
 
 @interface WKPasswordView () <UIDocumentPasswordViewDelegate>
@@ -100,7 +110,8 @@ const CGFloat passwordEntryFieldPadding = 10;
     [_scrollView setMaximumZoomScale:1];
     [_scrollView setZoomScale:1];
     [_scrollView setContentSize:self.frame.size];
-    [_scrollView setBackgroundColor:[UIColor groupTableViewBackgroundColor]];
+
+    configureScrollView(_scrollView.get());
 
     [scrollView addSubview:self];
 }
